deploy/overlays/production/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: go-hildesheim
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - go-hildesheim.de
    secretName: go-hildesheim-tls
  rules:
  - host: go-hildesheim.de
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: go-hildesheim
            port:
              number: 80
